<resources>
    <string name="app_name">CloudFunny</string>
    <string name="title_activity_base">BaseActivity</string>

    <string-array name="tittles">
        <item name="popular">最热美图</item>
        <item name="latest">最新美图</item>
        <item name="oldest">精选美图</item>
    </string-array>

    <string-array name="hot_tittles">
        <item name="weekly">周</item>
        <item name="monthly">月</item>
        <item name="historical">总</item>
    </string-array>
    <string name="image_search">图片搜索</string>
    <string name="kaiyan">开眼视频</string>
    <string name="zhihu">知乎日报</string>
    <string name="browser">浏览器中打开</string>
    <string name="copy">复制链接</string>
    <string name="copy_msg">已经复制链接地址到剪切板！</string>
    <string name="collection">收藏</string>
    <string name="article">热文</string>
    <string name="picture">美图</string>
    <string name="video">视频</string>
    <string name="set">我的</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="no_network">当前网络不可用，请检查网络情况</string>
    <string name="empty">请检查网络连接</string>
    <string name="view_empty">暂无相关数据</string>
    <string name="collector">我的收藏</string>
    <string name="about">关于云趣</string>
    <string name="night_model">夜间模式</string>
    <string name="setting">系统设置</string>
    <string name="person">个人主页</string>
    <string name="permission_application">权限申请</string>
    <string name="permission_application_content">在设置-应用-CloudFunny中开启权限，以正常使用CloudFunny</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="share">分享</string>
    <string name="save">下载图片</string>
    <string name="key_night_mode">夜间模式</string>
    <string name="key_clear_cache">清除缓存</string>
    <string name="key_version">当前版本</string>
    <string name="key_appName">云趣(CloudFunny)</string>

    <string name="thanks">感谢</string>
    <string name="summary">概述</string>
    <string name="version">当前版本：</string>
    <string name="key_project_page">项目主页</string>
    <string name="advise">意见反馈</string>
    <string name="check_update">检查更新</string>
    <string name="share_app">应用分享</string>
    <string name="key_project_programmer">应用作者</string>
    <string name="about1">• Glide - github.com/bumptech/glide</string>
    <string name="about2">• Retrofit - github.com/square/retrofit</string>
    <string name="about3">• Dagger2 - github.com/google/dagger</string>
    <string name="about4">• RxJava - github.com/ReactiveX/RxJava</string>
    <string name="about5">• greenDAO - github.com/greenrobot/greenDAO</string>
    <string name="about6">• ButterKnife - github.com/JakeWharton/butterknife</string>
    <string name="about7">• JiaoZiVideoPlayer - github.com/JiaoZiVideoPlayer</string>
    <string name="about8">• Unsplash提供图片数据</string>
    <string name="about9">• 知乎日报提供文章数据</string>
    <string name="about10">• 开眼视频提供视频数据</string>
    <string name="about11">• 和风天气提供天气数据</string>
    <string name="about12">• 百度定位提供定位服务</string>
    <string name="hot">近期热门</string>
    <string name="hot_more">更多热门推荐</string>
    <string name="may_like">你可能会喜欢</string>

</resources>
