<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="基本设置">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_night_mode"
            android:title="夜间模式" />
        <Preference
            android:key="@string/key_clear_cache"
            android:summary="缓存大小：1000.4M"
            android:title="清除缓存" />
    </PreferenceCategory>

    <PreferenceCategory android:title="其他说明">
        <Preference
            android:key="@string/key_version"
            android:summary="V 1.0"
            android:title="当前版本" />
        <Preference
            android:key="@string/key_appName"
            android:summary="云趣(CloudFunny)"
            android:title="应用名称" />
        <Preference
            android:key="@string/key_project_programmer"
            android:summary="LynnYuki"
            android:title="应用作者" />
        <Preference
            android:key="@string/key_project_page"
            android:summary="https://github.com/LynnYuki/cloudfunny"
            android:title="项目主页" />
    </PreferenceCategory>

</PreferenceScreen>